# home-agent

./: .env.example  .gitignore  M11_sandboxed_dreaming.md  M9_M10_consolidation_and_embodiment.md  README.md  family_agent_design.md  pyproject.toml
admin/: cli.py  critic_sweep.py  launchd.py  seed.py  test_resident_state_machine.py
config/: mcp.json  profiles.toml  roles.toml  tiers.toml
config/prompts/: base.md
config/prompts/domains/: browse.md  chores.md  finance.md  home.md
data/: imessage_relay.state
orchestrator/: approvals.py  auth.py  critic.py  db.py  embed.py  episodes.py  gating.py  loop.py  memory.py  morning_surface.py  night_cycle.py  prompts.py  pushover.py  resident.py  session.py  skills.py  threads.py
orchestrator/dream/: __init__.py  agent.py  constitution.py  cycle.py  inventory.py  proposals.py  sandbox.py
orchestrator/scheduler/: __init__.py  heartbeat.py  runner.py  store.py
tools/applescript/: _run.py  calendar.py  messages.py  reminders.py
tools/finance/: lots.py
tools/ha/: client.py
tools/sdk_mcp/: applescript_tools.py  finance_tools.py  ha_tools.py  memory_tools.py  reachy_tools.py  routines.py  scheduler_tools.py  skill_tools.py  test_tools.py  thread_tools.py
triggers/: http.py  imessage_relay.py  telegram_bot.py  telegram_format.py
triggers/launchd/: com.shupei.agent.critic_sweep.plist  com.shupei.agent.dream_cycle.plist  com.shupei.agent.imessage_relay.plist  com.shupei.agent.memory_prune.plist  com.shupei.agent.morning_brief.plist  com.shupei.agent.night_cycle.plist  com.shupei.agent.telegram_bot.plist
